# registries-near

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ava.config.cjs  ava.testnet.config.cjs  package.json  setup-env.sh
artifacts/: test_token.wasm
audits/: README.md
audits/internal/: README.md
audits/internal/analysis/: cargo-audit.txt  cargo-clippy.txt  cargo_tree.txt
scripts/: build.sh  setup_contract_account_testnet.sh
src/: lib.rs
test/: ServiceRegistry.ts  test.ts  testnet_ServiceRegistry.ts
