[package]
name = "registries_near"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "5.6.0"
near-contract-standards = "5.6.0"
borsh = "1.5.3"
hex = "0.4.3"
